--- a/package/dbus-python/Config.in
+++ b/package/dbus-python/Config.in
@@ -3,7 +3,7 @@ config BR2_PACKAGE_DBUS_PYTHON
 	depends on BR2_USE_WCHAR # glib2
 	depends on BR2_TOOLCHAIN_HAS_THREADS # glib2
 	depends on BR2_PACKAGE_DBUS
-	depends on BR2_PACKAGE_PYTHON
+	depends on BR2_PACKAGE_PYTHON3
 	select BR2_PACKAGE_DBUS_GLIB
 	help
 	  Python bindings for D-Bus
