Add a build-root option to build image making dependencies
Previously these would only be built if build-root itself was
building an image, and some dependencies were not persistent.

--- a/fs/Config.in
+++ b/fs/Config.in
@@ -1,5 +1,12 @@
 menu "Filesystem images"
 
+config BR2_TARGET_ROOTFS_DEPS
+	bool "build filesystem creation dependencies"
+	help
+	  This does not actually build a filesytem image, but creates
+	  several dependencies to make it easier for other scripts to
+	  create a filesystem image.
+
 source "fs/cloop/Config.in"
 source "fs/cpio/Config.in"
 source "fs/cramfs/Config.in"
